[pace]springBoot 使用nacos服务注册、发现，TODO Feign来规避client调用的复杂代码

--- a/base-server/pom.xml
+++ b/base-server/pom.xml
@@ -7,12 +7,8 @@
         <artifactId>cloudDev</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
-    <artifactId>config-center</artifactId>
-    <packaging>jar</packaging>
-
-    <name>config-center</name>
-    <description>Demo project for Spring Boot</description>
+    <artifactId>base-server</artifactId>
+    <name>base-server</name>
 
     <dependencies>
         <dependency>
@@ -20,31 +16,9 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>com.alibaba.boot</groupId>
-            <artifactId>nacos-config-spring-boot-starter</artifactId>
-            <version>${nacos-config-spring-boot.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba.boot</groupId>
-            <artifactId>nacos-config-spring-boot-actuator</artifactId>
-            <version>${nacos-config-spring-boot.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <artifactId>nacos-discovery-spring-boot-starter</artifactId>
+            <version>0.2.7</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
